syntax = "proto3";

package register;

option go_package = "./ucenter-rpc";

message RegReq {
  string username = 1;
  string password = 2;
  string phone = 4;
  string promotion = 5;
  string code = 6;
  string country = 7;
  string superPartner = 8;
}
message RegRes {}


message CodeReq {
  string phone = 1;
}
message CodeRes {
  string code = 1;
}

service Register {
  rpc registerByPhone(RegReq) returns(RegRes);
  rpc SendCode(CodeReq) returns(CodeRes);
}